@@ -1,0 +1,9 @@
+===========
+Basic Forms
+===========
+
+.. autoclass:: flatland.schema.declarative.Schema
+
+.. autoclass:: flatland.schema.declarative.SparseSchema
+
+.. autoclass:: flatland.schema.declarative.Form
