@@ -1,5 +1,0 @@
-===========
-Basic Forms
-===========
-
-.. autoclass:: flatland.schema.forms.Form
