@@ -25,11 +25,13 @@ from flatland.schema import (
     Properties,
     Ref,
     Scalar,
+    Schema,
     Sequence,
     Skip,
     SkipAll,
     SkipAllFalse,
     SparseDict,
+    SparseSchema,
     String,
     Time,
     Unevaluated,
@@ -64,11 +66,13 @@ __all__ = [
     'Properties',
     'Ref',
     'Scalar',
+    'Schema',
     'Sequence',
     'Skip',
     'SkipAll',
     'SkipAllFalse',
     'SparseDict',
+    'SparseSchema',
     'String',
     'Time',
     'Unevaluated',
