@@ -5,6 +5,12 @@ Changes
 Pre-release
 -----------
 
+- flatland.Form deprecated by flatland.Schema
+
+- flatland.SparseSchema is a declarative Schema backed by SparseDict
+
+- schema.forms moved to schema.declarative
+
 - Element.find_child renamed to Element.find_one
 
 - Removed flatland.ext (example credit card type)
